# Daikin-Rotex-HPSU-CAN

./: Rotex-Daikin-CAN.yaml  requests.h  secrets.yaml
include/: BidiMap.h  HPSU_compact_508.h  handler.h  request.h  utils.h
src/: utils.cpp
test/: CMakeLists.txt  build.sh  build_and_run.sh  dummys.cpp  dummys.h  run.sh  test.cpp  test_request.cpp  test_utils.cpp
yaml/: Rotex-Daikin-CAN.yaml  buttons.yaml  numbers.yaml  selects.yaml  sensors.yaml  switches.yaml  text_sensors.yaml  texts.yaml
